manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: traefik
  # tls:
  #   - secretName: 
  #     hosts:
  #       - 
  rules:
  - host: fastapi-traefik.cours-datascientest-devops.cloudns.be
    http:
      paths:
        # Path api web
        - path: /
          pathType: Exact
          backend:
             service:
              name: web-service
              port:
                number: 8000
        # Path pgAdmin
        - path: /api/admin
          pathType: Prefix
          backend:
             service:
              name: pgadmin-service
              port:
                number: 8080
        # Path kibana
        - path: /api/kibana
          pathType: Prefix
          backend:
             service:
              name: kibana-service
              port:
                number: 5601
        # Path dashboard traefik
        - path: /dashboard
          pathType: Prefix
          backend:
             service:
              name: api@internal
              port:
                number: 8080
